--- a/feature/src/main/res/layout/activity_main.xml
+++ b/feature/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/amiibo_logo"
         android:layout_width="wrap_content"
         android:layout_height="300dp"
         app:srcCompat="@drawable/logo_amiibo"
@@ -17,7 +17,7 @@
 
     <Button
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:id="@+id/button"
+        android:id="@+id/characters"
         android:layout_width="250dp"
         android:layout_height="70dp"
         android:layout_marginTop="8dp"
@@ -27,12 +27,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/amiibo_logo"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:id="@+id/button2"
+        android:id="@+id/cards"
         android:layout_width="250dp"
         android:layout_height="70dp"
         android:layout_marginBottom="8dp"
@@ -43,11 +43,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/characters"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
