--- a/feature/src/main/res/layout/cell.xml
+++ b/feature/src/main/res/layout/cell.xml
@@ -6,13 +6,10 @@
     android:orientation="vertical"
     android:background="#ffffff">
 
-
-
     <ImageView
         android:id="@+id/img"
         android:layout_width="match_parent"
-        android:contentDescription="TODOC"
-
+        android:contentDescription="@string/amiibo_name"
         android:layout_height="100dp"/>
 
     <TextView
