--- a/feature/src/main/res/layout/cell.xml
+++ b/feature/src/main/res/layout/cell.xml
@@ -4,18 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="#ffffff">
+    android:background="#ffffff"
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:contentDescription="@string/amiibo_name"
-        android:layout_height="100dp"/>
+        android:layout_height="wrap_content"
+        android:background="#ffff00"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"/>
 
     <TextView
         android:layout_gravity="center"
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:background="#00f0ff"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
 </LinearLayout>
